--- a/consumer/consumer-webapp/pom.xml
+++ b/consumer/consumer-webapp/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>consumer-stuff</artifactId>
+    <artifactId>consumer-webapp</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
