--- a/producer/producer-webapp/pom.xml
+++ b/producer/producer-webapp/pom.xml
@@ -13,7 +13,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>producer-stuff</artifactId>
+    <artifactId>producer-webapp</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
